2003-08-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Make a little more compatible
	with automake-1.7.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_init): Made the assignments from
	Steve's patch slightly more explicit. This is just a matter of
	style and pedanticism.

2003-07-24  Steve Chaplin
	* minefield.h: Add a field to struct _Sign to hold a pixbuf.

	* minefield.c (_setup_sign): Check for error when reading pixbuf.
	Read each pixbuf from file just once, not at every expose event.
	(gtk_minefield_init): Initialise the pixbuf pointers,

2003-07-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.desktop.in (_Comment): Typo, see bug #117235.

2003-07-16  William Jon McCann  <mccann@jhu.edu>

	* minefield.c (gtk_minefield_size_allocate): ANSI C build fix.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.desktop.in: Update name to fit HIG (bug 116916).

2003-07-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gtkmfframe.c: 
	* gtkmfframe.h:
	Removed since they are unnecessary.
	
	* gnomine.c (new_game): Add a conditional on the resizing code so
	the window is only resized if the grid size changes, this prevents
	unexpected window shrinkage when starting a new game and there was
	some space around the grid.

	* Makefile.am (gnomine_SOURCES): Removed the now unnecessary
	auxiliary widget files.

	* minefield.c (gtk_minefield_size_allocate): Let the minefield
	widget deal with the details of it's own size, the container only
	makes sure nothing stupid happens.

	* minefield.c (_setup_sign): Scale the pixmaps as per Jon's
	suggestion.

2003-07-07  Steve Chaplin  <stevech1097@yahoo.com.au>

	* minefield.c (gtk_minefield_size_request): Make the size request for
	the minimum size, to allow the widget to be reduced in size.
	(gtk_minefield_init): Remove lines setting requisition width and height
	- this is the job of gtk_minefield_size_request().